REGRESSION(r159166?): fast/block/float/float-with-fractional-height-vertical-lr.html, fast/block/float/float-with-fractional-height.html are failing https://bugs.webkit.org/show_bug.cgi?id=124506

Reviewed by Dirk Schulze.

Source/WebCore:

Floor the endpoints of the floating object interval to keep the old
behavior until a better fix can be created.

No new tests, fixes regression in existing tests.

* rendering/FloatingObjects.cpp:
(WebCore::FloatingObjects::intervalForFloatingObject):

LayoutTests:

Remove lines for tests that have been fixed by this patch.

* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:


Canonical link: https://commits.webkit.org/143871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160715 268f45cc-cd09-0410-ab3c-d52691b4dbfc